--- a/common/pom.xml
+++ b/common/pom.xml
@@ -44,6 +44,12 @@
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
     </dependency>
+    <!--鉴权-->
+    <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt</artifactId>
+        <version>0.9.0</version>
+    </dependency>
 </dependencies>
 
 </project>
